--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #212529; 
-  color: #ffffff; 
+  color: #e9e9e9; 
   min-height: 100vh;
 }
 
